<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colo_withe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.gov.cbtu.tremdebolso.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <FrameLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/color_cinza"
            android:layout_marginBottom="5dp"
            >
            <ImageView
                android:layout_width="115dp"
                android:layout_height="98dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_home"
                 />
        </FrameLayout>
            <LinearLayout
                android:orientation = "vertical"
                android:layout_width = "fill_parent"
                android:layout_height = "fill_parent" >
                <LinearLayout
                    android:orientation = "horizontal"
                    android:layout_width = "fill_parent"
                    android:layout_weight = "1"
                    android:layout_height = "wrap_content" >
                    <LinearLayout
                        android:orientation = "vertical"
                        android:layout_width = "0dp"
                        android:layout_weight = "1"
                        android:paddingTop="10dip"
                        android:paddingLeft="20dip"
                        android:layout_height = "fill_parent" >
                        <Button
                            android:id="@+id/btn_horario"
                            android:layout_marginLeft="30dp"
                            android:background="@color/color_azul"
                            android:drawableTop="@drawable/icon_horarios"
                            android:paddingTop="10dp"
                            android:text="@string/text_horarios"
                            android:textColor="@color/colo_withe"
                            android:textSize="@dimen/dimen_text_home"
                            android:layout_height="160dp"
                            android:layout_width="137dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation = "vertical"
                        android:layout_width = "0dp"
                        android:layout_weight = "1"
                        android:paddingTop="10dip"
                        android:paddingLeft="7dip"
                        android:layout_height = "fill_parent" >
                        <Button
                            android:id="@+id/btn_grade"
                            android:background="@color/color_azul"
                            android:drawableTop="@drawable/icon_grade"
                            android:paddingTop="13dp"
                            android:text="@string/text_grade"
                            android:textSize="@dimen/dimen_text_home"
                            android:textColor="@color/colo_withe"
                            android:layout_height="160dp"
                            android:layout_width="137dp"
                            android:layout_row="0"
                            android:layout_column="2" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation = "horizontal"
                    android:layout_weight = "1"
                    android:layout_width = "fill_parent"
                    android:layout_height = "wrap_content" >
                    <LinearLayout
                        android:orientation = "vertical"
                        android:layout_width = "0dp"
                        android:layout_weight = "1"
                        android:paddingTop="10dip"
                        android:paddingLeft="20dip"
                        android:layout_height = "fill_parent" >
                        <Button
                            android:id="@+id/btn_mapa"
                            android:layout_marginLeft="30dp"
                            android:background="@color/color_azul"
                            android:drawableTop="@drawable/icon_mapa"
                            android:paddingTop="10dp"
                            android:text="@string/text_mapa"
                            android:textSize="@dimen/dimen_text_home"
                            android:textColor="@color/colo_withe"
                            android:layout_height="160dp"
                            android:layout_width="137dp"
                            android:layout_row="1"
                            android:layout_column="1" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation = "vertical"
                        android:layout_width = "0dp"
                        android:layout_weight = "1"
                        android:paddingTop="10dip"
                        android:paddingLeft="7dip"
                        android:layout_height = "fill_parent" >
                        <Button
                            android:id="@+id/btn_fale"
                            android:background="@color/color_azul"
                            android:drawableTop="@drawable/icon_falebranco"
                            android:paddingTop="10dp"
                            android:text="@string/text_fale"
                            android:textSize="@dimen/dimen_text_home"
                            android:textColor="@color/colo_withe"
                            android:layout_height="160dp"
                            android:layout_width="137dp"
                            android:layout_row="1"
                            android:layout_rowSpan="2"
                            android:layout_column="2" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

</ScrollView>







